messaging_app/blue_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
      - name: messaging-app
        image: your_dockerhub_username/messaging-app:latest
        ports:
        - containerPort: 8000
